Fixed bug in metadata display
Issue: Information Cut Off on Textbook View More info footer tab

--- a/src/scripts/modules/media/footer/metadata/metadata.less
+++ b/src/scripts/modules/media/footer/metadata/metadata.less
@@ -79,3 +79,18 @@
     }
   }
 }
+
+
+// Override bootstrap styles allow dt metedata list to display whole text in dt element.
+.dl-metadata {
+  > dt {
+    margin-top: 5px;
+    white-space: normal;
+    text-overflow: inherit;
+  }
+
+  > dd {
+    margin-top: 5px;
+  }
+
+}
